# PazuEngine2D

./: .gitignore  .gitmodules  CMakeLists.txt  PazuEngine2D.code-workspace
Data/Shaders/: default.shader
ExampleGame/: CMakeLists.txt
ExampleGame/Assets/: README.md
ExampleGame/Assets/Armors/: Kurdele.png.res
ExampleGame/Assets/Characters/: Character.png.res
ExampleGame/Game/: App.cpp  App.hpp  CameraController.cpp  CameraController.hpp  Gui.cpp  Gui.hpp  State.cpp  State.hpp  main.cpp
Pazu/: Application.cpp  Application.hpp  Application.inl  Button.hpp  Camera.cpp  Camera.hpp  Configuration.hpp  Entity.cpp  Entity.hpp  Globals.cpp  Globals.hpp  Gui.cpp  Gui.hpp  Input.cpp  Input.hpp  ListBox.cpp  ListBox.hpp  Material.cpp  Material.hpp  Precompiled.hpp  Resource.hpp  ResourceLoader.cpp  ResourceLoader.hpp  ResourceManager.cpp  ResourceManager.hpp  ResourceManager.inl  Shader.cpp  Shader.hpp  ShaderLoader.cpp  ShaderLoader.hpp  Sprite.cpp  Sprite.hpp  State.hpp  StateManager.cpp  StateManager.hpp  Texture.cpp  Texture.hpp  TextureLoader.cpp  TextureLoader.hpp  Time.cpp  (+6 more)
